# scrap-bin

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
design mockups/: Tidepool.fig  UI_REQUIREMENTS.md  dialectic-concept-tidepool.html  scrapbin-color-v4.html
docs/: UI_REQUIREMENTS.md
proto/: sidecar.proto
shared/: __init__.py  chroma_client.py  embeddings.py  types.py
sidecar/: clustering_service.py  embedding_service.py  requirements.txt  server.py  thread_service.py
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chunker.rs  clustering.rs  config.rs  content_extractor.rs  fragment.rs  grpc_client.rs  main.rs  markdown.rs  pipeline.rs  reader.rs  search.rs  sidecar.rs  state.rs  threads.rs  watcher.rs
src-tauri/src/chroma/: client.rs  collections.rs  mod.rs  sidecar.rs
src-tauri/src/sources/: apple_notes.rs  chrome.rs  mod.rs  podcasts.rs  readwise.rs  rss.rs  twitter.rs
src/api/: commands.ts  index.ts  transforms.ts
src/components/: AppShell.tsx  ClusterEdges.tsx  ClusterNode.tsx  ErrorToast.tsx  FragmentItem.tsx  Landscape.tsx  MarginPanel.tsx  Rail.tsx  StatusBar.tsx  StreamItem.tsx  StreamPanel.tsx  Toolbar.tsx
src/components/cards/: TweetCard.tsx
src/components/clusters/: ClusterCell.tsx  ClusterGrid.tsx  FragmentPreview.tsx
src/components/inbox-triage/: FilterChips.tsx  InboxTriageView.tsx  TriageCard.tsx  TriageProgress.tsx
src/components/reader/: Reader.tsx
src/components/settings/: AddSourceModal.tsx  SettingsPanel.tsx  SourceDrawer.tsx  add-source-modal.css  settings.css  source-drawer.css
src/components/shared/: FloatingToolbar.tsx  HighlightGutter.tsx  HighlightPopover.tsx  MarkPips.tsx  (+1 more)
src/hooks/: useInitialize.ts  useKeyboardShortcuts.ts  useSearch.ts  useVaultWatcher.ts
src/stores/: appStore.ts
src/styles/: app-shell.css  cluster-grid.css  global.css  highlights.css  inbox-triage.css  landscape.css  margin.css  rail.css  reader.css  stream-triage.css  stream.css  tokens.css  tweet-card.css
src/utils/: fragments.ts  time.ts
(+4 files in other folders)
